--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server/server.js",
   "dependencies": {
     "express": "~4.13.4",
-    "mongoose": "~4.4.6"
+    "mongoose": "~4.4.6",
+    "body-parser": "~1.15.0"
   },
   "devDependencies": {},
   "scripts": {
