--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "dependencies": {
     "express": "~4.13.4",
     "mongoose": "~4.4.6",
-    "body-parser": "~1.15.0"
+    "body-parser": "~1.15.0",
+    "multer": "~1.1.0"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server/server.js"
